[project]
name = "healthtriage-v0"
version = "1.0.0"
description = "RL environment for medical triage in rural India"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.0",
    "openenv-core",
    "requests",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "healthtriage-v0"
version = "1.0.0"
entry_point = "server.app:main"